// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invoice Item should render Canceled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,11 +6,11 @@
        class="css-kkg48e-InvoiceListItemContent e7di52m3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
-         Bezahlte Rechnung für Foobar Memberplan
+         Stornierte Rechnung für Foobar Memberplan
        </h6>
        <ul
          class="css-579onz-InvoiceListItemMeta e7di52m2"
        >
          <li
@@ -111,11 +111,11 @@
            </svg>
             Betrag von CHF 5.-
          </li>
        </ul>
        <strong>
-         Bezahlt am 
+         Storniert am 
          <time
            datetime="2023-01-01"
          >
            01.01.2023 00:00
          </time>"
`;

exports[`Invoice Item should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 8px;
  border-radius: 4px;
  border: 1px solid rgba(0, 0, 0, 0.12);
  overflow: hidden;
  container-type: inline-size;
}

.emotion-2 {
  display: grid;
  gap: 16px;
  padding: 16px;
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  letter-spacing: 0.0075em;
}

.emotion-5 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  gap: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-4"
      >
        Bezahlte Rechnung für Foobar Memberplan
      </h6>
      <ul
        class="emotion-5 emotion-6"
      >
        <li
          class="emotion-7 emotion-8"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
            />
          </svg>
           Rechnungs-Nr: 4321-4321
        </li>
        <li
          class="emotion-7 emotion-8"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
            />
          </svg>
          <span>
            Abgeschlossen am 
            <time
              datetime="2023-01-01"
            >
              01.01.2023 00:00
            </time>
          </span>
        </li>
        <li
          class="emotion-7 emotion-8"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          <span>
            Fällig am 
            <time
              datetime="2023-01-01"
            >
              01.01.2023 00:00
            </time>
          </span>
        </li>
        <li
          class="emotion-7 emotion-8"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
            />
          </svg>
           Betrag von CHF 5.-
        </li>
      </ul>
      <strong>
        Bezahlt am 
        <time
          datetime="2023-01-01"
        >
          01.01.2023 00:00
        </time>
      </strong>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Invoice Item should render Unpaid 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,11 +6,11 @@
        class="css-kkg48e-InvoiceListItemContent e7di52m3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
-         Bezahlte Rechnung für Foobar Memberplan
+         Offene Rechnung für Foobar Memberplan
        </h6>
        <ul
          class="css-579onz-InvoiceListItemMeta e7di52m2"
        >
          <li
@@ -110,16 +110,22 @@
              />
            </svg>
             Betrag von CHF 5.-
          </li>
        </ul>
-       <strong>
-         Bezahlt am 
-         <time
-           datetime="2023-01-01"
+       <div
+         class="css-lst8rm-InvoiceListItemActions e7di52m0"
        >
-           01.01.2023 00:00
-         </time>
-       </strong>
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           Jetzt Bezahlen
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           />
+         </button>
+       </div>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Invoice Item should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <div
-     class="css-7e096c-InvoiceListItemWrapper e7di52m4"
+     class="extra-classname css-7e096c-InvoiceListItemWrapper e7di52m4"
    >
      <div
        class="css-kkg48e-InvoiceListItemContent e7di52m3"
      >
        <h6"
`;

exports[`Invoice Item should render WithEmotion 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Invoice Item should render WithPayError 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -111,10 +111,35 @@
            </svg>
             Betrag von CHF 5.-
          </li>
        </ul>
        <div
+         class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1hdyuqk-MuiPaper-root-MuiAlert-root"
+         role="alert"
+       >
+         <div
+           class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+         >
+           <svg
+             aria-hidden="true"
+             class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+             data-testid="ErrorOutlineIcon"
+             focusable="false"
+             viewBox="0 0 24 24"
+           >
+             <path
+               d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+             />
+           </svg>
+         </div>
+         <div
+           class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+         >
+           Foobar
+         </div>
+       </div>
+       <div
          class="css-lst8rm-InvoiceListItemActions e7di52m0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
            tabindex="0""
`;

exports[`Invoice Item should render WithPayLoading 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -114,18 +114,16 @@
        </ul>
        <div
          class="css-lst8rm-InvoiceListItemActions e7di52m0"
        >
          <button
-           class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
-           tabindex="0"
+           class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
+           disabled=""
+           tabindex="-1"
            type="button"
          >
            Jetzt Bezahlen
-           <span
-             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-           />
          </button>
        </div>
      </div>
    </div>
  </DocumentFragment>"
`;
